--- a/.gitmodules
+++ b/.gitmodules
@@ -12,28 +12,28 @@
 	url = https://github.com/dojo/util.git
 [submodule "src/jszlib"]
 	path = src/jszlib
-	url = git://github.com/rbuels/jszlib.git
+	url = https://github.com/rbuels/jszlib.git
 [submodule "src/lazyload"]
 	path = src/lazyload
-	url = git://github.com/rbuels/lazyload.git
+	url = https://github.com/rbuels/lazyload.git
 [submodule "src/dgrid"]
 	path = src/dgrid
-	url = git://github.com/SitePen/dgrid.git
+	url = https://github.com/SitePen/dgrid.git
 [submodule "src/xstyle"]
 	path = src/xstyle
-	url = git://github.com/kriszyp/xstyle.git
+	url = https://github.com/kriszyp/xstyle.git
 [submodule "src/put-selector"]
 	path = src/put-selector
-	url = git://github.com/kriszyp/put-selector.git
+	url = https://github.com/kriszyp/put-selector.git
 [submodule "src/dbind"]
 	path = src/dbind
-	url = git://github.com/rbuels/dbind.git
+	url = https://github.com/rbuels/dbind.git
 [submodule "src/json-schema"]
 	path = src/json-schema
-	url = git://github.com/kriszyp/json-schema.git
+	url = https://github.com/kriszyp/json-schema.git
 [submodule "src/jDataView"]
 	path = src/jDataView
-	url = git://github.com/rbuels/jDataView.git
+	url = https://github.com/rbuels/jDataView.git
 [submodule "src/FileSaver"]
 	path = src/FileSaver
-	url = git://github.com/dkasenberg/FileSaver.js.git
+	url = https://github.com/dkasenberg/FileSaver.js.git
